Updated data file path.

--- a/notebooks/openmm_overview.ipynb
+++ b/notebooks/openmm_overview.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -80,73 +80,20 @@
      "output_type": "stream",
      "text": [
       "--> loading input data...\n",
-      "Help on method createSystem in module simtk.openmm.app.forcefield:\n",
-      "\n",
-      "createSystem(topology, nonbondedMethod=NoCutoff, nonbondedCutoff=Quantity(value=1.0, unit=nanometer), constraints=None, rigidWater=True, removeCMMotion=True, hydrogenMass=None, residueTemplates={}, ignoreExternalBonds=False, switchDistance=None, flexibleConstraints=False, **args) method of simtk.openmm.app.forcefield.ForceField instance\n",
-      "    Construct an OpenMM System representing a Topology with this force field.\n",
-      "    \n",
-      "    Parameters\n",
-      "    ----------\n",
-      "    topology : Topology\n",
-      "        The Topology for which to create a System\n",
-      "    nonbondedMethod : object=NoCutoff\n",
-      "        The method to use for nonbonded interactions.  Allowed values are\n",
-      "        NoCutoff, CutoffNonPeriodic, CutoffPeriodic, Ewald, PME, or LJPME.\n",
-      "    nonbondedCutoff : distance=1*nanometer\n",
-      "        The cutoff distance to use for nonbonded interactions\n",
-      "    constraints : object=None\n",
-      "        Specifies which bonds and angles should be implemented with constraints.\n",
-      "        Allowed values are None, HBonds, AllBonds, or HAngles.\n",
-      "    rigidWater : boolean=True\n",
-      "        If true, water molecules will be fully rigid regardless of the value\n",
-      "        passed for the constraints argument\n",
-      "    removeCMMotion : boolean=True\n",
-      "        If true, a CMMotionRemover will be added to the System\n",
-      "    hydrogenMass : mass=None\n",
-      "        The mass to use for hydrogen atoms bound to heavy atoms.  Any mass\n",
-      "        added to a hydrogen is subtracted from the heavy atom to keep\n",
-      "        their total mass the same.\n",
-      "    residueTemplates : dict=dict()\n",
-      "        Key: Topology Residue object\n",
-      "        Value: string, name of _TemplateData residue template object to use for (Key) residue.\n",
-      "        This allows user to specify which template to apply to particular Residues\n",
-      "        in the event that multiple matching templates are available (e.g Fe2+ and Fe3+\n",
-      "        templates in the ForceField for a monoatomic iron ion in the topology).\n",
-      "    ignoreExternalBonds : boolean=False\n",
-      "        If true, ignore external bonds when matching residues to templates.  This is\n",
-      "        useful when the Topology represents one piece of a larger molecule, so chains are\n",
-      "        not terminated properly.  This option can create ambiguities where multiple\n",
-      "        templates match the same residue.  If that happens, use the residueTemplates\n",
-      "        argument to specify which one to use.\n",
-      "    switchDistance : float=None\n",
-      "        The distance at which the potential energy switching function is turned on for\n",
-      "        Lennard-Jones interactions. If this is None, no switching function will be used.\n",
-      "    flexibleConstraints : boolean=False\n",
-      "        If True, parameters for constrained degrees of freedom will be added to the System\n",
-      "    args\n",
-      "        Arbitrary additional keyword arguments may also be specified.\n",
-      "        This allows extra parameters to be specified that are specific to\n",
-      "        particular force fields.\n",
-      "    \n",
-      "    Returns\n",
-      "    -------\n",
-      "    system\n",
-      "        the newly created System\n",
-      "\n",
       "--> running energy minimsation...\n",
-      "--> reduced energy from -299285.62259939517 kJ/mol to -366468.00213349063 kJ/mol\n",
+      "--> reduced energy from -299285.6227214655 kJ/mol to -366434.9033171318 kJ/mol\n",
       "--> running time integration...\n",
       "#\"Time (ps)\"\t\"Potential Energy (kJ/mole)\"\t\"Temperature (K)\"\t\"Speed (ns/day)\"\n",
-      "0.020000000000000004\t-340825.95938672574\t158.24141551060583\t0\n",
-      "0.04000000000000002\t-339000.5347324857\t149.47921067922414\t3.27\n",
-      "0.06000000000000004\t-339100.14545350696\t149.85999855723804\t3.63\n",
-      "0.08000000000000006\t-338222.08867031307\t145.49878225338077\t3.62\n",
-      "0.10000000000000007\t-337628.77084821404\t142.54424775279904\t3.58\n",
-      "0.12000000000000009\t-337070.38299248193\t139.9150868187949\t3.61\n",
-      "0.1400000000000001\t-337420.09007046936\t141.595157869547\t3.68\n",
-      "0.16000000000000011\t-338115.53079246223\t145.03644738621037\t3.69\n",
-      "0.18000000000000013\t-338547.0220826759\t147.21323708425493\t3.74\n",
-      "0.20000000000000015\t-339233.15934831026\t150.5532919532547\t3.69\n"
+      "0.020000000000000004\t-340040.34812195454\t159.56501907873937\t0\n",
+      "0.04000000000000002\t-338744.1517979552\t153.40541840535846\t2.75\n",
+      "0.06000000000000004\t-338423.55678689375\t151.7128078471142\t2.75\n",
+      "0.08000000000000006\t-337416.8118224936\t146.66535026806474\t2.77\n",
+      "0.10000000000000007\t-336944.2878138131\t144.28589539556998\t2.73\n",
+      "0.12000000000000009\t-336466.0436581623\t142.0984739115031\t2.72\n",
+      "0.1400000000000001\t-337149.0470295342\t145.41448838070258\t2.76\n",
+      "0.16000000000000011\t-337534.0067801288\t147.38874373892395\t2.73\n",
+      "0.18000000000000013\t-337917.93918418715\t149.31512748773332\t2.72\n",
+      "0.20000000000000015\t-338849.20130252454\t153.82965818238407\t2.73\n"
      ]
     }
    ],
@@ -161,7 +108,7 @@
     "\n",
     "# load an input structure and topology data:\n",
     "print(\"--> loading input data...\")\n",
-    "pdb = PDBFile('dhfr.pdb')\n",
+    "pdb = PDBFile('../data/dhfr.pdb')\n",
     "forcefield = ForceField('amber99sbildn.xml', 'tip3p.xml')\n",
     "\n",
     "# assemble a simulation system:\n",
